tests/ui/span/slice-borrow.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/slice-borrow.rs:6:28
   |
LL |         let x: &[isize] = &vec![1, 2, 3, 4, 5];
   |                            ^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
...
LL |     }
   |     - temporary value is freed at the end of this statement
LL |     y.use_ref();
   |     - borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
